Fixed preview functionality and added preview providers for all view files.

--- a/Mythic.xcodeproj/xcshareddata/xcschemes/Mythic.xcscheme
+++ b/Mythic.xcodeproj/xcshareddata/xcschemes/Mythic.xcscheme
@@ -5,24 +5,6 @@
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
-      <PostActions>
-         <ExecutionAction
-            ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
-            <ActionContent
-               title = "Bump Build Number"
-               scriptText = "# Type a script or drag a script file from your workspace to insert its path.&#10;# https://www.theswift.dev/posts/auto-increment-your-build-numbers&#10;&#10;if [ &quot;$CONFIGURATION&quot; != &quot;Preview&quot; ]; then&#10;    ( cd &quot;${PROJECT_DIR}&quot; &amp;&amp; agvtool bump )&#10;fi&#10;">
-               <EnvironmentBuildable>
-                  <BuildableReference
-                     BuildableIdentifier = "primary"
-                     BlueprintIdentifier = "6AB474942AACBBE900AB9C63"
-                     BuildableName = "Mythic.app"
-                     BlueprintName = "Mythic"
-                     ReferencedContainer = "container:Mythic.xcodeproj">
-                  </BuildableReference>
-               </EnvironmentBuildable>
-            </ActionContent>
-         </ExecutionAction>
-      </PostActions>
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
@@ -57,6 +39,24 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <PreActions>
+         <ExecutionAction
+            ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
+            <ActionContent
+               title = "Bump Build Number"
+               scriptText = "# Type a script or drag a script file from your workspace to insert its path.&#10;&#10;cd &quot;${PROJECT_DIR}&quot; &amp;&amp; agvtool bump&#10;">
+               <EnvironmentBuildable>
+                  <BuildableReference
+                     BuildableIdentifier = "primary"
+                     BlueprintIdentifier = "6AB474942AACBBE900AB9C63"
+                     BuildableName = "Mythic.app"
+                     BlueprintName = "Mythic"
+                     ReferencedContainer = "container:Mythic.xcodeproj">
+                  </BuildableReference>
+               </EnvironmentBuildable>
+            </ActionContent>
+         </ExecutionAction>
+      </PreActions>
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
