--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -4,6 +4,7 @@ disabled_rules:
   - function_body_length
   - file_length
   - cyclomatic_complexity
+  - trailing_whitespace
 
 excluded:
   - .build
