--- a/Mythic/Info.plist
+++ b/Mythic/Info.plist
@@ -9,6 +9,8 @@
 			<string>ExtendedGamepad</string>
 		</dict>
 	</array>
+	<key>GCSupportsControllerUserInteraction</key>
+	<true/>
 	<key>SUFeedURL</key>
 	<string>https://getmythic.app/appcast.xml</string>
 	<key>SUPublicEDKey</key>
