--- a/Mythic.xcodeproj/xcshareddata/xcschemes/Mythic.xcscheme
+++ b/Mythic.xcodeproj/xcshareddata/xcschemes/Mythic.xcscheme
@@ -68,6 +68,12 @@
             ReferencedContainer = "container:Mythic.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-FIRDebugEnabled"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
