style: update file headers

--- a/Mythic/GoogleService-Info.plist
+++ b/Mythic/GoogleService-Info.plist
@@ -15,15 +15,15 @@
 	<key>STORAGE_BUCKET</key>
 	<string>mythic-app.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:736227004399:ios:bfb984f1d0a93062bf701a</string>
 </dict>
