chore: update to new URL

--- a/Mythic/Info.plist
+++ b/Mythic/Info.plist
@@ -12,7 +12,7 @@
 		</dict>
 	</array>
 	<key>SUFeedURL</key>
-	<string>https://getmythic.app/appcast.xml</string>
+	<string>https://dl.getmythic.app/updates/update.xml</string>
 	<key>SUPublicEDKey</key>
 	<string>g+sJ+Hhxtb5ziscjMaoIvjMcvycB1PpZhhRJeoF+YSM=</string>
 </dict>
