ci: implement Xcode cache in build workflow
Signed-off-by: esi <41133734+vapidinfinity@users.noreply.github.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,8 +19,16 @@ jobs:
     runs-on: macos-26
     steps:
     - uses: actions/checkout@v5
+
+    - uses: irgaly/xcode-cache@v1
+      with:
+        key: xcode-cache-deriveddata-${{ github.workflow }}-${{ github.sha }}
+        restore-keys: xcode-cache-deriveddata-${{ github.workflow }}-
+        
     - run: |
         xcodebuild -scheme Mythic \
           CODE_SIGNING_ALLOWED=NO \
           SWIFTLINT=NO \
+          -parallel-testing-enabled YES \
+          -jobs $(sysctl -n hw.ncpu) \
           -verbose
