ci(build): rename alias for readability
Signed-off-by: esi <41133734+vapidinfinity@users.noreply.github.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,12 @@
 name: Build Mythic
 on:
   push:
-    paths: &mythic_paths
+    paths: &workflow_paths
       - '.github/workflows/build.yml'
       - 'Mythic.xcodeproj/**'
       - 'Mythic/**'
   pull_request:
-    paths: *mythic_paths
+    paths: *workflow_paths
   workflow_dispatch:
 
 # cancel previous runs w/ same ref, save CI minutes
